termino de carrousel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,4 +46,59 @@
     isolation: isolate;
   }
 
-  
+  body *{
+    margin: 0px;
+    padding: 0px;
+    font-family: "Cabin", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.ingredientes li{
+  list-style: none;
+}
+
+.dim-imag-carr{
+width: 17%;
+
+}
+.texto-lobster{
+  font-family: "Lobster";
+  font-weight: 400;
+}
+
+.cabinBold{
+  font-weight: 700;
+}
+
+.bg-propio {
+  background-color: #373A3C
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon{
+  color: #d0bbbb;
+}
+
+.bg-newsl {
+  background-color: #DC3545;
+}
+.title-color{
+  color: #373A3C;
+}
+
+.carousel-item, .tx-color {
+  color: #FFFFFF;
+}
+
+@media screen and (width< 768px) {#carrusel_viajes
+  {
+      display: none;
+  }
+}
+
+@media screen and (width< 576px) {.barra-nav
+  {
+      text-align: center;
+  }
+}
+
