--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,17 +28,15 @@
   background-color: black;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 
-@media screen and (width< 768px) 
-{.presentacion
+@media screen and (width< 576px) 
+{#presentacion
   {
       display: none;
   }
 }
 
-@media screen and (width< 576px) {.barra-nav
-  {
-      text-align: center;
-  }
-}
 
